--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,12 @@ Source: aiccu
 Section: net
 Priority: optional
 Maintainer: SixXS Staff <info@sixxs.net>
-Build-Depends: debhelper (>> 3.0.0), libgnutls-dev
+Build-Depends: debhelper (>> 3.0.0), libgnutls28-dev
 Standards-Version: 3.7.2
 
 Package: aiccu
 Architecture: any
-Depends: ${shlibs:Depends}, iputils-ping, iputils-tracepath, iproute, debconf, lsb-base (>= 1.3-9ubuntu2), gawk | awk, libgnutls13
+Depends: ${shlibs:Depends}, iputils-ping, iputils-tracepath, iproute, debconf, lsb-base (>= 1.3-9ubuntu2), gawk | awk, gnutls-bin
 Recommends: ntpdate | ntp
 Description: SixXS Automatic IPv6 Connectivity Client Utility
  This client automatically gives one IPv6 connectivity
