--- a/aiccu.conf
+++ b/aiccu.conf
@@ -35,7 +35,7 @@ verbose true
 # file. The TIC server *will* automatically disable accounts which
 # are detected to run in this mode.
 #
-daemonize true
+daemonize false
 
 # Automatic Login and Tunnel activation?
 automatic true
